--- a/kingWeb/requirements.txt
+++ b/kingWeb/requirements.txt
@@ -1,2 +1,34 @@
-django >=1.9, <2
-django-environ==0.4.4  # https://github.com/joke2k/django-environ
+arrow==0.12.1
+astroid==1.6.4
+binaryornot==0.4.4
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+colorama==0.3.9
+cookiecutter==1.6.0
+Django==1.11.13
+django-environ==0.4.4
+environ==1.0
+et-xmlfile==1.0.1
+future==0.16.0
+idna==2.6
+isort==4.3.4
+jdcal==1.4
+Jinja2==2.10
+jinja2-time==0.2.0
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
+mysqlclient==1.3.12
+openpyxl==2.5.4
+pip==10.0.1
+poyo==0.4.1
+pylint==1.9.1
+python-dateutil==2.7.3
+pytz==2018.4
+requests==2.18.4
+setuptools==28.8.0
+six==1.11.0
+urllib3==1.22
+whichcraft==0.4.1
+wrapt==1.10.11
